Correct margin rule for center aligning full widths when output is using css custom properties

--- a/src/scss/proportions-grid.scss
+++ b/src/scss/proportions-grid.scss
@@ -219,6 +219,7 @@ $maxWidth: ($proportionsGridMaxWidth * 0.1rem);
         &.#{$proportionsGridClassPrefix}_w_1 {
             @if $proportionsGridUseCSSCustomProperties {
                 max-width: var(--pgrid-max-width);
+                margin: 0 auto;
             }
             @else {
                 max-width: $maxWidth;
